objects/Step_Forward_Job__c.object
<CustomObject>
    <fields>
        <fullName>SF_Owner_Email__c</fullName>
        <inlineHelpText>Email of Account Manager</inlineHelpText>
        <label>SF Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <defaultValue>9000</defaultValue>
        <label>Salary</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Account_Management_Name__c</fullName>
        <inlineHelpText>Name of Step Forward Account Management</inlineHelpText>
        <label>Step Forward Account Management Name</label>
        <referenceTo>Step_Forward_Account_Management__c</referenceTo>
        <relationshipLabel>Step Forward Jobs</relationshipLabel>
        <relationshipName>Step_Forward_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Job_Name__c</fullName>
        <label>Step Forward Job Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successful_Job_offer_accepted__c</fullName>
        <label>Successful - Job offer accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>This_is_a_customer_facing_role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This is a customer facing role.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Days_not_possible_for_Employers__c</fullName>
        <label>Training Days not possible for Employers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsuccessful_YP_not_accepted__c</fullName>
        <label>Unsuccessful - YP not accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verbal_confirmation_date__c</fullName>
        <label>Verbal confirmation date</label>
        <type>Date</type>
    </fields>
    <label>Step Forward Job</label>
    <listViews>
        <fullName>AGE_grant_tracking1</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Employer__c</columns>
        <columns>Employer_eligible_for_AGE_grant__c</columns>
        <columns>Original_AGE_grant_form_received__c</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU_Received_date__c</columns>
        <columns>Successful_Job_offer_accepted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_cycle__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Employer_eligible_for_AGE_grant__c</field>
            <operation>equals</operation>
            <value>Yes,Employer not interested</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>1. In discussion,2. Verbal confirmation</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>3. All docs signed off and ready for matching</value>
        </filters>
        <filters>
            <field>Original_AGE_grant_form_received__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>AGE grant forms received</label>
    </listViews>
    <listViews>
        <fullName>AM_Compliance_View</fullName>
        <columns>SF_Account_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Employer__c</columns>
        <columns>MOU__c</columns>
        <columns>Health_Safety_risk_assessment_form__c</columns>
        <columns>Date_HS_Form_signer_by_employer__c</columns>
        <columns>Employer_liability_insurance_expiry__c</columns>
        <columns>Original_AGE_grant_form_received__c</columns>
        <columns>Registered_Organisation_Address__c</columns>
        <columns>Registered_Organisation_Name__c</columns>
        <columns>Registered_Company_Number__c</columns>
        <columns>JD_Download_link__c</columns>
        <columns>Fee_Payment_Terms_Type__c</columns>
        <columns>Employer_eligible_for_AGE_grant__c</columns>
        <columns>Agreed_Fee_for_Employer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_cycle__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Joe Public TEST</value>
        </filters>
        <label>AM Missing Information</label>
        <sharedTo>
            <role>Step_Forward_Account_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>Pathway__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <label>All Mou - Rick view</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view1</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>Pathway__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>notEqual</operation>
            <value>Working with Children</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>notEqual</operation>
            <value>4. Closed: Job confirmation unsuccessful</value>
        </filters>
        <label>All Mou - Emma view</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view2</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>Pathway__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>3. All docs signed off and ready for matching,2. Verbal confirmation</value>
        </filters>
        <label>All Mou - Rick view</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view3</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>Pathway__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>2. Verbal confirmation</value>
        </filters>
        <filters>
            <field>Job_cycle__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All Mou - Rick view</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view_IT</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>&quot;IT, Software and Telecoms&quot;</value>
        </filters>
        <label>All Mou - Rick view - IT</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view_Social_media</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Social Media &amp; Digital Marketing</value>
        </filters>
        <label>All Mou - Rick view - Social media</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view_WWC</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Working with Children</value>
        </filters>
        <label>All Mou - Rick view - WWC</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view_accounting</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </filters>
        <label>All Mou - Rick view - accounting</label>
    </listViews>
    <listViews>
        <fullName>All_Mou_Rick_view_businss</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <columns>Job_Postcode__c</columns>
        <columns>Group_11__c</columns>
        <columns>Group_21__c</columns>
        <columns>Group_31__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Business Support Services</value>
        </filters>
        <label>All Mou - Rick view - businss</label>
    </listViews>
    <listViews>
        <fullName>Ayesha_view_JD_view_all</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Pathway__c</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>Attendance_confirmed_fr_Matching_Eve_Emp__c</columns>
        <columns>Job_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>contains</operation>
            <value>Accounting,Business Support Services,&quot;IT, Software and Telecoms&quot;,Social Media</value>
        </filters>
        <filters>
            <field>Full_job_description__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ayesha view - JD view all</label>
    </listViews>
    <listViews>
        <fullName>C3_Matching_Jobs_Ready_to_Interview</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Pathway__c</columns>
        <columns>Employer__c</columns>
        <columns>Job_main_contact__c</columns>
        <columns>Fee_Payment_Terms_Type__c</columns>
        <columns>Job_Postcode__c</columns>
        <columns>MOU__c</columns>
        <columns>JD_Download_link__c</columns>
        <columns>Approved_by_Account_Owner__c</columns>
        <columns>Approved_by_Line_Manager__c</columns>
        <columns>Health_Safety_risk_assessment_form__c</columns>
        <columns>Employer_liability_insurance_expiry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_cycle__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Job_Matching_Status__c</field>
            <operation>notEqual</operation>
            <value>Ready for Interview</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notContain</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>notEqual</operation>
            <value>4. Closed: Job confirmation unsuccessful</value>
        </filters>
        <label>MATCH Jobs NOT Ready to Interview</label>
    </listViews>
    <listViews>
        <fullName>CBC_Services</fullName>
        <columns>NAME</columns>
        <columns>Employer__c</columns>
        <columns>Approved_by_Line_Manager__c</columns>
        <columns>Health_Safety_risk_assessment_form__c</columns>
        <columns>Full_job_description__c</columns>
        <columns>JD_Link__c</columns>
        <columns>JD_Download_link__c</columns>
        <columns>Approved_by_Account_Owner__c</columns>
        <columns>Manager_email_for_JD_check__c</columns>
        <columns>Email_manager_about_JD_check__c</columns>
        <columns>Agreed_Fee_for_Employer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>CBC</value>
        </filters>
        <label>CBC Services</label>
    </listViews>
    <listViews>
        <fullName>Cath_MOU_Confirmations</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Employer__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_Account_Management_Name__c</columns>
        <columns>MOU__c</columns>
        <columns>Job_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOU__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Catharine,Diana,Stephen</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>contains</operation>
            <value>Accounting,Business Support Services,&quot;IT, Software and Telecoms&quot;,Social Media</value>
        </filters>
        <label>Cath MOU Confirmations</label>
    </listViews>
    <nameField>
        <displayFormat>SFJOB-{0000000}</displayFormat>
        <label>Step Forward Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Forward Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>